sass/utils/_animations.scss
@keyframes menu-loading {
  0% {
    opacity: 0;
    transform: translateY(15px);
  }
  100% {
    opacity: 1;
    transform: translateY(0px);
  }
}

@keyframes loading-spinner {
  90% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

@keyframes loading-spinner-rotate {
  to {
    transform: rotate(360deg);
  }
}

